src/test/ui/specialization/deafult-associated-type-bound-1.stderr
error[E0277]: the trait bound `str: std::clone::Clone` is not satisfied
  --> $DIR/deafult-associated-type-bound-1.rs:17:5
   |
LL | trait X {
   | ------- required by `X`
...
LL |     default type U = str;
   |     ^^^^^^^^^^^^^^^^^^^^^ the trait `std::clone::Clone` is not implemented for `str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
